добавил проект keksobooking

--- a/projects.html
+++ b/projects.html
@@ -185,6 +185,33 @@
         <div class="projects__date">Март 2017</div>
       </div>
     </div>
+
+    <div class="projects__item">
+      <div class="projects__img-wrap">
+        <a class="projects__img" href="projects/keksobooking/index.html" target="_blank">
+          <picture>
+            <img src="img/keksobooking.jpg" srcset="img/keksobooking@2x.jpg 2x" alt="project">
+          </picture>
+
+          <div class="projects__dropdown-link">
+            <span>keksobooking</span>
+          </div>
+        </a>
+      </div>
+
+      <div class="projects__content">
+        <a class="projects__title-link" href="projects/keksobooking/index.html" target="_blank">
+          Учебный макет базового интенсива по Node JS в HTML Academy<br>
+        </a>
+
+        <p class="projects__description">Исходник:</p>
+        <a class="projects__description-link" href="https://github.com/Funky-Juice/59949-keksobooking" target="_blank">
+          https://github.com/Funky-Juice/keksobooking
+        </a>
+
+        <div class="projects__date">Март 2018</div>
+      </div>
+    </div>
   </div>
 </main>
 
